Now the buttons and the input number field are stacked in their own little div, whose display is set to flex and the flex direction is set to column, to ensure proper alignment of the elements inside the divs.

--- a/style.css
+++ b/style.css
@@ -19,12 +19,20 @@ body {
     background-color: #5899E2;
     width: 100%;
     text-align: center;
-    margin-bottom: 5vh;
     padding: 20px;
 }
 .header > p {
     color: white;
     font-size: 4rem;
+}
+
+#buttons-and-grid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10vw;
+    margin-top: 10vh
 }
 
 .grid {
@@ -33,10 +41,16 @@ body {
     width: 65vh;
     grid-template-columns: repeat(var(--gridNumber), auto);
     grid-template-rows: repeat(var(--gridNumber), auto);
+    box-shadow: 
+                0 1px 2px rgb(222, 222, 222),
+                0 2px 6px rgb(223, 223, 223),
+                0 4px 10px rgb(224, 224, 224),
+                0 8px 16px rgb(225, 225, 225),
+                0 16px 20px rgb(226, 226, 226);
 }
 
 .box {
-    border: 1px solid rgb(225, 225, 225);
+    border: 1px solid black;
     width: auto;
     height: auto;
 }
@@ -52,17 +66,49 @@ body {
     margin-bottom: 5vh;
     gap: 20px;
 }
-#buttons > input {
+#buttons > input[type=button] {
     cursor: pointer;
-    border: 2px solid black;
+    border: none;
     border-radius: 10px;
     color: white;
     font-weight: 600;
     font-size: 1.2rem;
     padding: 10px;
+    transition: 0.3s all ease-in-out;
+}
+#buttons > input[type=button]:hover {
+    box-shadow: 
+                0 -1px 2px rgb(221, 221, 221),
+                0 1px 2px rgb(222, 222, 222),
+                0 2px 4px rgb(223, 223, 223),
+                0 4px 8px rgb(224, 224, 224),
+                0 8px 12px rgb(225, 225, 225),
+                0 16px 18px rgb(226, 226, 226);
 }
 
 #reset-grid-button {
     background-color: #FE5F55;
 }
 
+#quantity, #quantity::placeholder {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+    background-color: #7189FF;
+    color: white;
+    border: none;
+    font-size: 1.2rem;
+    outline: none;
+    border-radius: 10000px;
+    padding: 10px 20px;
+    transition: 0.3s all ease-in-out;
+}
+#quantity:focus,  #quantity:hover{
+    box-shadow: 
+                0 -1px 2px rgb(221, 221, 221),
+                0 1px 2px rgb(222, 222, 222),
+                0 2px 4px rgb(223, 223, 223),
+                0 4px 8px rgb(224, 224, 224),
+                0 8px 12px rgb(225, 225, 225),
+                0 16px 18px rgb(226, 226, 226);
+}
